fix: spacing projetos

--- a/style2.0.1.css
+++ b/style2.0.1.css
@@ -167,7 +167,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: min(80%, 60ch);
+
     text-align: center;
     justify-content:center;
 }
@@ -182,10 +182,15 @@ body {
     font-weight: 500;
     line-height: 2.5rem;
     margin-top: 2rem;
+    width: min(80%, 60ch);
 }
 .project__description strong{
     font-weight: 900;
     color: rgb(134, 29, 29);
+}
+.projetos{
+    align-items: space-between;
+    justify-content: space-between;
 }
 .link__project{
     text-decoration: none;
@@ -311,7 +316,7 @@ label, input{
     .sections{
         grid-auto-flow: column;
         grid-auto-columns: 1fr;
-        align-items: flex-start;
+
         
 
       
